# reminduck

./: .gitignore  Commands.txt  FLATHUB.com.github.matfantinel.reminduck.json  README.md  com.github.matfantinel.reminduck.json  meson.build
build-aux/flatpak/: com.github.matfantinel.reminduck.json
data/: Application.css  com.github.matfantinel.reminduck.appdata.xml.in  com.github.matfantinel.reminduck.desktop.in  com.github.matfantinel.reminduck.gresource.xml  com.github.matfantinel.reminduck.gschema.xml  gresource.xml  gschema.xml  meson.build  stylesheet-dark.css  stylesheet.css
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  ca.po  com.github.matfantinel.reminduck.pot  de.po  es.po  es.pot  fr.po  it.po  nl.po  pt.po  ru.po  tr.po
po/extra/: LINGUAS  POTFILES  ca.po  de.po  es.po  es.pot  extra.pot  fr.po  it.po  nl.po  pt.po  tr.po
src/: Application.vala  Database.vala  MainWindow.vala  meson.build
src/Objects/: Reminder.vala
src/Utils/: GtkSettings.vala
src/Widgets/Views/: ReminderEditor.vala  RemindersView.vala
